site/src/styles/Wiki.module.css
.slideshow {
  margin-top: 100px;
  margin-left: 100px;
}

.top_wrapper {
  display: flex;
  justify-content: stretch;
}

#carousel img {
  height: 400px;
}

.carousel_wrapper {
  width: 70%;
}

.summary {
  width: 30%;
}

.description, .review_box, .content, .review, .wiki_grid {
  display: flex;
}

.wiki_grid, .description {
  margin-top: 3vh;
}

.description,.review_box {
  flex-direction: column;
}

.description {
  width: 100%;
}

.description p {
  font-size: 20px;
}

.review_box {
  margin-top: 200px;
  row-gap: 50px;
  
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  min-height: 40%;
  transition: 0.2s;
}

.content {
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-between;
  height: 100%;
  width: 100%;
  margin-right: 10%;
  padding-top: 7vh;
  padding-left: 10%;
  font-family: 'Inter', Arial, Helvetica, sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 24px;
  padding-bottom: 20px;
}

.review {
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
  padding: 10px;
  width: 75%;
  border: 2px solid black;
  border-radius: 20px;
  height: auto;
}
.review_form {
  height: 30vh;
}

.success {
  background-color: green;
  height: 0px;
  transition: 
    background-color 0.2s,
    height 0.5s;
  transition-delay: 0s, 0.25s, 0.75s;
}

.review_submitted {
  width: 75%;
  overflow: hidden;
  border-radius: 20px; 
}

.review_submitted .review_input, .review_submitted .review_rating {
  display: none;
}

.review input {
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
}
.review textarea {
  width: 30vw;
  height: 10vh;
  padding-left: 5px;
  resize: none;
}

.review input[type="submit"] {
  border-radius: 5px;
  border: 1px solid black;
  width: 20%;
  transition: 0.2s;
}

.review input[type="submit"]:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
  cursor: pointer;
}

.review input, .review textarea {
  border: 0px;
  border-bottom: 1px solid black;
  background-color: transparent;
  font-size: 16px;
  font-family: 'Inter', Arial, Helvetica, sans-serif;
  font-style: normal;
  margin-top: 5px;
}

.review input:focus, .review textarea:focus {
  outline: none;
}

.review .char_count {
  font-size: 12px;
  width: 100%;
  text-align: right;
}

.review_rating {
  line-height: normal;
  width: 12em;
}

.subtitle {
  font-size: smaller;
  color: gray;
  text-decoration: none;
}

.right {
  align-self: right;
}

.review h3 {
  font-size: 20px;
}

.review .subtitle {
  font-size: 15px;
  font-weight: normal;
}

.review h2 {
  font-size: 25px;
  flex: 50%;
  box-sizing: border-box;
}

.wiki_grid {
  
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
  margin-top: 3vh;
  padding-right: 3vw;
  padding-left: 3vw;
}

.wiki_square {
  height: auto;
  width: 15vw;
  border: none;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  margin: 10px;
  text-align: center;
  border-radius: 15px;
}


.wiki_square a {
  width: 100%;
  display: block;
  margin-bottom: 5px;
}

.wiki_square img {
  width: 100%;
  border-top-right-radius: 15px;
  border-top-left-radius: 15px;
}

.wiki_square:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.hr {
  width: 80%;
  border: 2px solid var(--uw-purple);
}


.hidden {
  visibility: hidden;
}

